--- a/pages/products.html
+++ b/pages/products.html
@@ -82,11 +82,11 @@
                         <i class="fa-regular fa-sliders"></i>
                     </button>
                 </div>
-                <div class="products__cards">
+                <div class="row products__cards gx-3 g-4">
                     <!-- Looping products -->
                     <script>
                         for (let i = 0; i < 12; i++) {
-                            document.write(`<div class="card">
+                            document.write(`<div class="col-sm-12 col-md-6 col-lg-4 col-xl-3"><div class="card">
                         <div class="splide card_img_slider">
                             <div class="splide__track">
                                 <ul class="splide__list">
@@ -111,7 +111,7 @@
                                 for Authenticator...</p>
                             <a href="#" class="card__link">
                                 Details
-                                <i class="fa-regular fa-right-long ms-2"></i>
+                                <i class="fa-regular fa-arrow-right-long ms-2"></i>
                             </a>
                             <div class="card__price">
                                 <p class="card_product_price">€12.</p>
@@ -129,7 +129,7 @@
                                 <i class="fa-light fa-triangle-exclamation"></i>
                             </button>
                         </div>
-                    </div>`)
+                    </div></div>`)
                         }
                     </script>
                 </div>
@@ -157,21 +157,7 @@
     <!--  -->
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/splide.min.js"></script>
-    <script>
-        [...document.querySelectorAll('[data-bs-toggle="tooltip"]')]
-            .forEach(el => new bootstrap.Tooltip(el))
-        let splides = document.querySelectorAll('.card_img_slider');
-        if (splides.length) {
-            let splideOptions = {
-                perPage: 1, perMove: 1, arrows: false, autoplay: true, lazyLoad: 'nearby', resetProgress: true
-            }
-            for (let i = 0; i < splides.length; i++) {
-                let splideElement = splides[i];
-                let splide = new Splide(splideElement, splideOptions);
-                splide.mount();
-            }
-        }
-    </script>
+    <script src="../js/card.js"></script>
 </body>
 
 </html>
