--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 </p>
                                 <a href="#" class="hero_card_link">
                                     See all products
-                                    <i class="fa-regular fa-right-long ms-1"></i>
+                                    <i class="fa-regular fa-arrow-right-long ms-1"></i>
                                 </a>
                                 <a href="" class="btn hero_card_btn">
                                     <i class="fa-solid fa-arrow-right"></i>
@@ -85,7 +85,7 @@
                                     Microsoft as compatible with the Azure Active Directory passwordless experience.
                                 </p>
                                 <a href="#" class="hero_card_link">See all products <i
-                                        class="fa-regular fa-right-long ms-1"></i></a>
+                                        class="fa-regular fa-arrow-right-long ms-1"></i></a>
                                 <a href="" class="btn hero_card_btn">
                                     <i class="fa-solid fa-arrow-right"></i>
                                 </a>
@@ -103,7 +103,7 @@
                                     Microsoft as compatible with the Azure Active Directory passwordless experience.
                                 </p>
                                 <a href="#" class="hero_card_link">See all products <i
-                                        class="fa-regular fa-right-long ms-1"></i></a>
+                                        class="fa-regular fa-arrow-right-long ms-1"></i></a>
                                 <a href="" class="btn hero_card_btn">
                                     <i class="fa-solid fa-arrow-right"></i>
                                 </a>
@@ -125,7 +125,9 @@
                 <div class="splide products__slider" role="group">
                     <div class="splide__track">
                         <ul class="splide__list">
-                            <li class="splide__slide">
+                            <script>
+                                for (let i = 0; i < 6; i++) {
+                                    document.write(`<li class="splide__slide">
                                 <div class="card">
                                     <div class="splide card_img_slider">
                                         <div class="splide__track">
@@ -154,7 +156,7 @@
                                             for Authenticator...</p>
                                         <a href="#" class="card__link">
                                             Order
-                                            <i class="fa-regular fa-right-long ms-2"></i>
+                                            <i class="fa-regular fa-arrow-right-long ms-2"></i>
                                         </a>
                                         <div class="card__price">
                                             <p class="card_product_price">€12.</p>
@@ -166,7 +168,7 @@
                                             <i class="fa-regular fa-cart-shopping"></i>
                                         </button>
                                         <!-- Button with tooltip -->
-                                        <button class="btn btn__square card__btn white_to_red_btn"
+                                        <button class="btn btn__square card__btn white_to_red_btn ${(i+1) % 3 != 0 ? 'd-none' : ''}"
                                             data-bs-toggle="tooltip" data-bs-placement="bottom"
                                             data-bs-title="cannot be programmed using iPhone"
                                             data-bs-custom-class="card_btn_tooltip">
@@ -174,207 +176,9 @@
                                         </button>
                                     </div>
                                 </div>
-                            </li>
-                            <li class="splide__slide">
-                                <div class="card">
-                                    <div class="splide card_img_slider">
-                                        <div class="splide__track">
-                                            <ul class="splide__list">
-                                                <li class="splide__slide">
-                                                    <img src="../img/products/card-product1.png" alt=""
-                                                        class="card__img">
-                                                </li>
-                                                <li class="splide__slide">
-                                                    <img src="../img/products/card-product2.png" alt=""
-                                                        class="card__img">
-                                                </li>
-                                                <li class="splide__slide">
-                                                    <img src="../img/products/card-product3.png" alt=""
-                                                        class="card__img">
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="card__content">
-                                        <a href="pages/product.html">
-                                            <h3 class="card__title">C301-i programmable TOTP token</h3>
-                                        </a>
-                                        <p class="card__text">A keychain attachable programmable token. Drop-in
-                                            replacement
-                                            for Authenticator...</p>
-                                        <a href="#" class="card__link">
-                                            Order
-                                            <i class="fa-regular fa-right-long ms-2"></i>
-                                        </a>
-                                        <div class="card__price">
-                                            <p class="card_product_price">€12.</p>
-                                            <span class="card_price_point">00</span>
-                                        </div>
-                                    </div>
-                                    <div class="card__buttons">
-                                        <button class="btn btn__square card__btn white_to_red_btn">
-                                            <i class="fa-regular fa-cart-shopping"></i>
-                                        </button>
-                                        <!-- Button with tooltip -->
-                                        <button class="btn btn__square card__btn white_to_red_btn"
-                                            data-bs-toggle="tooltip" data-bs-placement="bottom"
-                                            data-bs-title="cannot be programmed using iPhone"
-                                            data-bs-custom-class="card_btn_tooltip">
-                                            <i class="fa-light fa-triangle-exclamation"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="splide__slide">
-                                <div class="card">
-                                    <div class="splide card_img_slider">
-                                        <div class="splide__track">
-                                            <ul class="splide__list">
-                                                <li class="splide__slide">
-                                                    <img src="../img/products/card-product1.png" alt=""
-                                                        class="card__img">
-                                                </li>
-                                                <li class="splide__slide">
-                                                    <img src="../img/products/card-product2.png" alt=""
-                                                        class="card__img">
-                                                </li>
-                                                <li class="splide__slide">
-                                                    <img src="../img/products/card-product3.png" alt=""
-                                                        class="card__img">
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="card__content">
-                                        <a href="pages/product.html">
-                                            <h3 class="card__title">C301-i programmable TOTP token</h3>
-                                        </a>
-                                        <p class="card__text">A keychain attachable programmable token. Drop-in
-                                            replacement
-                                            for Authenticator...</p>
-                                        <a href="#" class="card__link">
-                                            Order
-                                            <i class="fa-regular fa-right-long ms-2"></i>
-                                        </a>
-                                        <div class="card__price">
-                                            <p class="card_product_price">€12.</p>
-                                            <span class="card_price_point">00</span>
-                                        </div>
-                                    </div>
-                                    <div class="card__buttons">
-                                        <button class="btn btn__square card__btn white_to_red_btn">
-                                            <i class="fa-regular fa-cart-shopping"></i>
-                                        </button>
-                                        <!-- Button with tooltip -->
-                                        <button class="btn btn__square card__btn white_to_red_btn"
-                                            data-bs-toggle="tooltip" data-bs-placement="bottom"
-                                            data-bs-title="cannot be programmed using iPhone"
-                                            data-bs-custom-class="card_btn_tooltip">
-                                            <i class="fa-light fa-triangle-exclamation"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="splide__slide">
-                                <div class="card">
-                                    <div class="splide card_img_slider">
-                                        <div class="splide__track">
-                                            <ul class="splide__list">
-                                                <li class="splide__slide">
-                                                    <img src="../img/products/card-product1.png" alt=""
-                                                        class="card__img">
-                                                </li>
-                                                <li class="splide__slide">
-                                                    <img src="../img/products/card-product2.png" alt=""
-                                                        class="card__img">
-                                                </li>
-                                                <li class="splide__slide">
-                                                    <img src="../img/products/card-product3.png" alt=""
-                                                        class="card__img">
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="card__content">
-                                        <a href="pages/product.html">
-                                            <h3 class="card__title">C301-i programmable TOTP token</h3>
-                                        </a>
-                                        <p class="card__text">A keychain attachable programmable token. Drop-in
-                                            replacement
-                                            for Authenticator...</p>
-                                        <a href="#" class="card__link">
-                                            Order
-                                            <i class="fa-regular fa-right-long ms-2"></i>
-                                        </a>
-                                        <div class="card__price">
-                                            <p class="card_product_price">€12.</p>
-                                            <span class="card_price_point">00</span>
-                                        </div>
-                                    </div>
-                                    <div class="card__buttons">
-                                        <button class="btn btn__square card__btn white_to_red_btn">
-                                            <i class="fa-regular fa-cart-shopping"></i>
-                                        </button>
-                                        <!-- Button with tooltip -->
-                                        <button class="btn btn__square card__btn white_to_red_btn"
-                                            data-bs-toggle="tooltip" data-bs-placement="bottom"
-                                            data-bs-title="cannot be programmed using iPhone"
-                                            data-bs-custom-class="card_btn_tooltip">
-                                            <i class="fa-light fa-triangle-exclamation"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="splide__slide">
-                                <div class="card">
-                                    <div class="splide card_img_slider">
-                                        <div class="splide__track">
-                                            <ul class="splide__list">
-                                                <li class="splide__slide">
-                                                    <img src="../img/products/card-product1.png" alt=""
-                                                        class="card__img">
-                                                </li>
-                                                <li class="splide__slide">
-                                                    <img src="../img/products/card-product2.png" alt=""
-                                                        class="card__img">
-                                                </li>
-                                                <li class="splide__slide">
-                                                    <img src="../img/products/card-product3.png" alt=""
-                                                        class="card__img">
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="card__content">
-                                        <a href="pages/product.html">
-                                            <h3 class="card__title">C301-i programmable TOTP token</h3>
-                                        </a>
-                                        <p class="card__text">A keychain attachable programmable token. Drop-in
-                                            replacement
-                                            for Authenticator...</p>
-                                        <a href="#" class="card__link">
-                                            Order
-                                            <i class="fa-regular fa-right-long ms-2"></i>
-                                        </a>
-                                        <div class="card__price">
-                                            <p class="card_product_price">€12.</p>
-                                            <span class="card_price_point">00</span>
-                                        </div>
-                                    </div>
-                                    <div class="card__buttons">
-                                        <button class="btn btn__square card__btn white_to_red_btn">
-                                            <i class="fa-regular fa-cart-shopping"></i>
-                                        </button>
-                                        <!-- Button with tooltip -->
-                                        <button class="btn btn__square card__btn white_to_red_btn"
-                                            data-bs-toggle="tooltip" data-bs-placement="bottom"
-                                            data-bs-title="cannot be programmed using iPhone"
-                                            data-bs-custom-class="card_btn_tooltip">
-                                            <i class="fa-light fa-triangle-exclamation"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </li>
+                            </li>`);
+                                }
+                            </script>
                         </ul>
                     </div>
                 </div>
