--- a/pages/done.html
+++ b/pages/done.html
@@ -16,11 +16,17 @@
         <a href="./checkout.html">checkout</a>
         <a href="./compare.html">compare</a>
         <a href="./completed_orders.html">completed_orders</a>
+        <a href="./contact.html">Contact</a>
         <a href="./downloads.html">downloads</a>
+        <a href="./faq.html">FAQ</a>
+        <a href="./guides.html">Guides</a>
+        <a href="./login.html">Login</a>
         <a href="./personal_information.html">personal_information</a>
         <a href="./processing_orders.html">processing_orders</a>
         <a href="./product.html">product</a>
         <a href="./products.html">products</a>
+        <a href="./registry.html">register</a>
+        <a href="./tools.html">tools</a>
     </div>
 </body>
 
