--- a/index.html
+++ b/index.html
@@ -280,6 +280,13 @@
         </script>
     </div>
     <!--  -->
+    <div class="cookies__loader">
+        <script>
+            $(document).ready(function () {
+                $('.cookies__loader').load("components/cookies.html");
+            });
+        </script>
+    </div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/splide.min.js"></script>
     <script src="js/splide.js"></script>
