--- a/pages/compare.html
+++ b/pages/compare.html
@@ -39,7 +39,7 @@
         <div class="container">
             <section class="products__content">
                 <div class="products_content_header">
-                    <h2 class="products__title">Products</h2>
+                    <h2 class="products__title">Compare</h2>
                     <div class="products_content_header_blog">
                         <span class="badge me-10">FIDO2 Keys</span>
                         <p class="products_content_header_text">Classic Tokens</p>
@@ -111,7 +111,7 @@
                                     <span class="card_price_point">00</span>
                                 </div>
                             </div>
-                            <a href="#" class="btn compare_btn w-100 my-2 text-start">
+                            <a href="./product.html" class="btn compare_btn w-100 my-2 text-start">
                                 Details 
                                 <i class="fa-solid fa-arrow-right-long ms-1 text-align-start"></i>
                             </a>
