--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,11 +40,11 @@
                     <hr class="w-25 mb-lg-4" style="height: 4px;background-color: white; opacity: 1;">
                     <h4 class="mb-lg-5 fw-light">Fill up the form and our Team will get back to you with 25 hours.</h4>
                     <a href="mailto:info@token2.com" class="fs-5 mb-lg-2"><i
-                            class="fa-solid fa-envelope me-lg-4"></i>info@token2.com</a>
-                    <a href="tel:+16012015580" class="fs-5 mb-lg-2"><i class="fa-solid fa-phone me-lg-4"></i></i>+1
+                            class="fa-solid fa-envelope me-lg-4 me-2"></i>info@token2.com</a>
+                    <a href="tel:+16012015580" class="fs-5 mb-lg-2"><i class="fa-solid fa-phone me-lg-4 me-2"></i></i>+1
                         601-201-5580</a>
                     <a href="https://goo.gl/maps/a2UP6TpRZYtJjBDh7" target="_blank" class="fs-5 mb-lg-2"><i
-                            class="fa-solid fa-location-dot me-lg-4"></i></i></i>1642 Washington Ave, Jackson, MS</a>
+                            class="fa-solid fa-location-dot me-lg-4 me-2"></i></i></i>1642 Washington Ave, Jackson, MS</a>
                 </div>
                 <form class="col-lg-6 col-sm-12">
                     <div class="row d-flex ">
