--- a/pages/login.html
+++ b/pages/login.html
@@ -37,23 +37,23 @@
             <div class="row mt-5 p-lg-5 p-sm-3 pt-5 text-white">
                 <div class="col-lg-5 col-sm-12 d-flex flex-column mb-4">
                     <h1 class="mb-lg-3">Not Registered yet?</h1>
-                    <h4 class="mb-lg-5 fw-light">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                    <h4 class="mb-lg-5 fw-light" style="font-size: 15px; font-family: 'Open Sans'; line-height: 30px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                         accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
                         veritatis et quasi architecto beatae vitae dicta sunt explicabo.</h4>
                     <a href="./registry.html" class="fs-5 mb-lg-2">
-                        <button class="btn btn-light text-danger w-25">Sing UP</button>
+                        <button class="btn btn-light text-danger w-25">Sign Up</button>
                     </a>
                 </div>
                 <form class="col-lg-6 offset-lg-1 col-12">
                     <h1 class="mb-lg-5 mb-3">Login</h1>
                     <div class="row d-flex mb-3">
                         <div class="col-lg-10 col-sm-12">
-                            <input type="text" class="form-control py-2 bg-transparent text-white" placeholder="Username">
+                            <input type="text" class="contact__input form-control form-control-lg py-2 bg-transparent text-white" placeholder="Username">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col-lg-10 col-sm-12">
-                            <input type="password" class="form-control py-2 bg-transparent text-white" placeholder="Password">
+                            <input type="password" class="contact__input form-control form-control-lg py-2 bg-transparent text-white" placeholder="Password">
                         </div>
                     </div>
 
@@ -66,7 +66,7 @@
                             </label>
                         </div>
                         <div class="col-lg-10 pe-1 mb-2">
-                            <button type="submit" class="btn btn-light text-danger w-100 loginBtn">Sing IN</button>
+                            <button type="submit" class="btn btn-light text-danger w-100 loginBtn">Sign In</button>
                         </div>
                         <div class="col-lg-10 px-3 text-center mb-2">
                             <p class="or">or</p>
