--- a/pages/registry.html
+++ b/pages/registry.html
@@ -99,7 +99,7 @@
                         accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
                         veritatis et quasi architecto beatae vitae dicta sunt explicabo.</h4>
                     <a href="./login.html" class="fs-5 mb-lg-2">
-                        <button class="btn btn-light text-danger w-25">Sing IN</button>
+                        <button class="btn btn-light text-danger w-25">Sign In</button>
                     </a>
                 </div>
             </div>
