--- a/index.html
+++ b/index.html
@@ -51,62 +51,72 @@
                         </button>
                     </div>
                 </div>
-                <div class="hero__products">
-                    <div class="hero__cards">
-                        <div class="hero__card">
-                            <img src="img/products/hero-product1.png" alt="" class="hero_card_img">
-                            <div class="hero_card_content">
-                                <h3 class="hero_card_title">FIDO2 Keys</h3>
-                                <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
-                                    key
-                                    vendor</p>
-                                <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
-                                    verified by
-                                    Microsoft as compatible with the Azure Active Directory passwordless experience.
-                                </p>
-                                <a href="#" class="hero_card_link">
-                                    See all products
-                                    <i class="fa-regular fa-arrow-right-long ms-1"></i>
-                                </a>
-                                <a href="" class="btn hero_card_btn">
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                </a>
+                <div class="hero__products mt-md-5 mt-3 pt-3">
+                    <div class="row gy-4">
+                        <div class="col-sm-12 col-md-6 col-xl-4">
+                            <div class="hero__card">
+                                <img src="img/products/hero-product1.png" alt="" class="hero_card_img">
+                                <div class="hero_card_content">
+                                    <h3 class="hero_card_title">FIDO2 Keys</h3>
+                                    <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
+                                        key
+                                        vendor</p>
+                                    <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
+                                        verified by
+                                        Microsoft as compatible with the Azure Active Directory passwordless experience.
+                                    </p>
+                                    <a href="#" class="hero_card_link">
+                                        See all products
+                                        <i class="fa-regular fa-arrow-right-long ms-1"></i>
+                                    </a>
+                                    <a href="" class="btn hero_card_btn">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                        <div class="hero__card">
-                            <img src="img/products/hero-product2.png" alt="" class="hero_card_img">
-                            <div class="hero_card_content">
-                                <h3 class="hero_card_title">FIDO2 Keys</h3>
-                                <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
-                                    key
-                                    vendor</p>
-                                <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
-                                    verified by
-                                    Microsoft as compatible with the Azure Active Directory passwordless experience.
-                                </p>
-                                <a href="#" class="hero_card_link">See all products <i
-                                        class="fa-regular fa-arrow-right-long ms-1"></i></a>
-                                <a href="" class="btn hero_card_btn">
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                </a>
+                        <div class="col-sm-12 col-md-6 col-xl-4">
+                            <div class="hero__card">
+                                <img src="img/products/hero-product1.png" alt="" class="hero_card_img">
+                                <div class="hero_card_content">
+                                    <h3 class="hero_card_title">FIDO2 Keys</h3>
+                                    <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
+                                        key
+                                        vendor</p>
+                                    <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
+                                        verified by
+                                        Microsoft as compatible with the Azure Active Directory passwordless experience.
+                                    </p>
+                                    <a href="#" class="hero_card_link">
+                                        See all products
+                                        <i class="fa-regular fa-arrow-right-long ms-1"></i>
+                                    </a>
+                                    <a href="" class="btn hero_card_btn">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                        <div class="hero__card">
-                            <img src="img/products/hero-product3.png" alt="" class="hero_card_img">
-                            <div class="hero_card_content">
-                                <h3 class="hero_card_title">FIDO2 Keys</h3>
-                                <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
-                                    key
-                                    vendor</p>
-                                <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
-                                    verified by
-                                    Microsoft as compatible with the Azure Active Directory passwordless experience.
-                                </p>
-                                <a href="#" class="hero_card_link">See all products <i
-                                        class="fa-regular fa-arrow-right-long ms-1"></i></a>
-                                <a href="" class="btn hero_card_btn">
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                </a>
+                        <div class="col-sm-12 col-md-6 col-xl-4">
+                            <div class="hero__card">
+                                <img src="img/products/hero-product1.png" alt="" class="hero_card_img">
+                                <div class="hero_card_content">
+                                    <h3 class="hero_card_title">FIDO2 Keys</h3>
+                                    <p class="hero_card_text">Token2 is a verified Microsoft-compatible FIDO2 security
+                                        key
+                                        vendor</p>
+                                    <p class="hero_card_desc">All Token2 FIDO2 security keys listed on this page are
+                                        verified by
+                                        Microsoft as compatible with the Azure Active Directory passwordless experience.
+                                    </p>
+                                    <a href="#" class="hero_card_link">
+                                        See all products
+                                        <i class="fa-regular fa-arrow-right-long ms-1"></i>
+                                    </a>
+                                    <a href="" class="btn hero_card_btn">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -190,58 +200,60 @@
                     <h3 class="main__title">Features</h3>
                     <a href="pages/products.html" class="see__all">See all</a>
                 </div>
-                <div class="features__boxes">
-                    <div class="features__box">
-                        <h4 class="features__title">
-                            Using hardware tokens with Azure Active Directory
-                        </h4>
-                        <p class="features__text">
-                            Token2 is listed by Microsoft as a recommended hardware supplier both for Azure MFA and
-                            Azure Passwordless. We have solutions that work for any type of Office365/Azure
-                            subscription, with or without Premium license.
-                        </p>
-                        <button class="btn btn__square features__btn">
-                            <i class="fa-regular fa-cart-shopping me-1"></i>
-                        </button>
+                <div class="row gy-4 mb-4">
+                    <div class="col-sm-12 col-md-6">
+                        <div class="features__box">
+                            <h4 class="features__title">
+                                Using hardware tokens with Azure Active Directory
+                            </h4>
+                            <p class="features__text">
+                                Token2 is listed by Microsoft as a recommended hardware supplier both for Azure MFA and
+                                Azure Passwordless. We have solutions that work for any type of Office365/Azure
+                                subscription, with or without Premium license.
+                            </p>
+                            <a href="#" class="btn btn__square features__btn white_to_red_btn">
+                                <i class="fa-regular fa-cart-shopping"></i>
+                            </a>
+                        </div>
                     </div>
-                    <div class="features__box">
-                        <h4 class="features__title">
-                            Using hardware tokens with Azure Active Directory
-                        </h4>
-                        <p class="features__text">
-                            Token2 is listed by Microsoft as a recommended hardware supplier both for Azure MFA and
-                            Azure Passwordless. We have solutions that work for any type of Office365/Azure
-                            subscription, with or without Premium license.
-                        </p>
-                        <button class="btn btn__square features__btn">
-                            <i class="fa-regular fa-cart-shopping me-1"></i>
-                        </button>
+                    <div class="col-sm-12 col-md-6">
+                        <div class="features__box">
+                            <h4 class="features__title">
+                                Integration guides
+                            </h4>
+                            <p class="features__text">
+                                We have solutions that can integrate with almost any system, such as Office365/Azure, Fortinet, Sophos, Watchguard, Google and many others. Below is the list of integration guides with different systems published so far, and it is far from being exhaustive.
+                            </p>
+                            <a href="#" class="btn btn__square features__btn white_to_red_btn">
+                                <i class="fa-regular fa-cart-shopping"></i>
+                            </a>
+                        </div>
                     </div>
-                    <div class="features__box">
-                        <h4 class="features__title">
-                            Using hardware tokens with Azure Active Directory
-                        </h4>
-                        <p class="features__text">
-                            Token2 is listed by Microsoft as a recommended hardware supplier both for Azure MFA and
-                            Azure Passwordless. We have solutions that work for any type of Office365/Azure
-                            subscription, with or without Premium license.
-                        </p>
-                        <button class="btn btn__square features__btn">
-                            <i class="fa-regular fa-cart-shopping me-1"></i>
-                        </button>
+                    <div class="col-sm-12 col-md-6">
+                        <div class="features__box">
+                            <h4 class="features__title">
+                                Go passwordless with Token2 FIDO2 Security Keys
+                            </h4>
+                            <p class="features__text">
+                                FIDO2 security keys are an unphishable standards-based passwordless authentication method that can come in any form factor. Token2 FIDO2 Security keys enable organizations and users to use a USB key sign in to Azure AD without the need of entering a password. TOKEN2 FIDO2 Security keys are listed by Microsoft as Azure AD Passwordless-compatible.
+                            </p>
+                            <a href="#" class="btn btn__square features__btn white_to_red_btn">
+                                <i class="fa-regular fa-cart-shopping"></i>
+                            </a>
+                        </div>
                     </div>
-                    <div class="features__box">
-                        <h4 class="features__title">
-                            Using hardware tokens with Azure Active Directory
-                        </h4>
-                        <p class="features__text">
-                            Token2 is listed by Microsoft as a recommended hardware supplier both for Azure MFA and
-                            Azure Passwordless. We have solutions that work for any type of Office365/Azure
-                            subscription, with or without Premium license.
-                        </p>
-                        <button class="btn btn__square features__btn">
-                            <i class="fa-regular fa-cart-shopping me-1"></i>
-                        </button>
+                    <div class="col-sm-12 col-md-6">
+                        <div class="features__box">
+                            <h4 class="features__title">
+                                Integration guides
+                            </h4>
+                            <p class="features__text">
+                                We have solutions that can integrate with almost any system, such as Office365/Azure, Fortinet, Sophos, Watchguard, Google and many others. Below is the list of integration guides with different systems published so far, and it is far from being exhaustive.
+                            </p>
+                            <a href="#" class="btn btn__square features__btn white_to_red_btn">
+                                <i class="fa-regular fa-cart-shopping"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
