fixed header bugs

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Token 2 About</title>
+    <title>Token 2 Contact</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
         </div>
         <!-- Contact Page  -->
         <main class="container">
-            <div class="row mt-5 px-lg-5 pt-5 text-white">
+            <div class="row mt-5 px-lg-5 pt-md-5 text-white">
                 <div class="col-lg-6 col-sm-12 d-flex flex-column mb-4">
                     <h1 class="mb-lg-3">Contact information</h1>
                     <hr class="w-25 mb-lg-4" style="height: 4px;background-color: white; opacity: 1;">
@@ -95,14 +95,7 @@
         </script>
     </div>
     <!--  -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
-        integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"
-        integrity="sha512-d8F1J2kyiRowBB/8/pAWsqUl0wSEOkG5KATkVV4slfblq9VRQ6MyDZVxWl2tWd+mPhuCbpTB4M7uU/x9FlgQ9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="../js/about.js"></script>
 </body>
 
 </html>
