--- a/pages/downloads.html
+++ b/pages/downloads.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Token 2 About</title>
+    <title>Token 2 Downloads</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,7 +45,7 @@
             <div class="row w-100">
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h1 class="text-white display-5 fw-bold mb-lg-5 mb-md-3 mb-2">Downloads</h1>
-                    <p class="lh-lg text-white mb-lg-5 mb-md-3 mb-3" style="text-align: justify;">We have solutions that
+                    <p class="lh-lg text-white mb-lg-4 mb-4 pb-sm-2" style="text-align: justify;">We have solutions that
                         can integrate with almost any system, below
                         is the list of integration
                         guides with different systems published so far, and it is far from being exhaustive. Feel free
@@ -54,7 +54,7 @@
                 </div>
 
                 <!-- Personal Page Tabs -->
-                <ul class="col-12 text-white mb-lg-5 mb-md-3 mb-2 tabs">
+                <ul class="col-12 text-white mb-lg-5 mb-4 pb-sm-3 tabs">
                     <li>
                         <a href="../pages/processing_orders.html">
                             Prosessing Orders
@@ -156,14 +156,7 @@
         </script>
     </div>
     <!--  -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
-        integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"
-        integrity="sha512-d8F1J2kyiRowBB/8/pAWsqUl0wSEOkG5KATkVV4slfblq9VRQ6MyDZVxWl2tWd+mPhuCbpTB4M7uU/x9FlgQ9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="../js/about.js"></script>
 </body>
 
 </html>
