--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- styles -->
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="css/home.css">
-    <script src="./js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
 </head>
 
 <body>
