--- a/pages/done.html
+++ b/pages/done.html
@@ -11,6 +11,7 @@
 <body>
     <div class="div" style="display: flex; flex-direction: column; gap: 20px">
         <a href="./about.html">About</a>
+        <a href="./blog.html">Blog</a>
         <a href="./canceled_orders.html">canceled_orders</a>
         <a href="./checkout-empty.html">checkout empty</a>
         <a href="./checkout.html">checkout</a>
