--- a/pages/tools.html
+++ b/pages/tools.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Token 2 About</title>
+    <title>Token 2 Tools</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
         <main class="container my-5">
             <div class="row mt-lg-5 mt-3 pt-lg-5 pt-3">
                 <div class="col-12 text-white mb-lg-3">
-                    <h1 class="mb-4 col-lg-6 col-6">Tools for hardware tokens and security keys</h1>
+                    <h1 class="mb-4 col-lg-6 col-sm-12">Tools for hardware tokens and security keys</h1>
                     <div class="row mb-4">
                         <p class="lh-lg col-lg-6 col-12">We have solutions that can integrate with almost any system,
                             below is the
@@ -427,14 +427,7 @@
         </script>
     </div>
     <!--  -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
-        integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"
-        integrity="sha512-d8F1J2kyiRowBB/8/pAWsqUl0wSEOkG5KATkVV4slfblq9VRQ6MyDZVxWl2tWd+mPhuCbpTB4M7uU/x9FlgQ9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="../js/about.js"></script>
 </body>
 
 </html>
